--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/weo-edu/window-features/issues"
   },
-  "homepage": "https://github.com/weo-edu/window-features"
+  "homepage": "https://github.com/weo-edu/window-features",
+  "devDependencies": {
+    "mocha": "^2.2.1"
+  }
 }
